[package]
name = "nt-dll-sys"
version = "0.1.1"
authors = ["Ben Lichtman"]
edition = "2018"
description = "Rust bindings for the undocumented ntdll.dll windows library"
repository = "https://github.com/Ben-Lichtman/nt-dll-sys"
license = "MIT OR Apache-2.0"

[build-dependencies]
bindgen = "0.57.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]